--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>LEARN TO CODE.</h1>
-        <h1>LEARN TO BE CREATIVE.</h1>
+        <h1>LEARN TO CODE. TEST TESET TEST</h1>
+        <h1>LEARN TO BE CREATIVE.TEST TEST TEST</h1>
         <h1>TEST ONE TWO THREE CHANGE.</h1>
         <p>Progate is a web service where you can learn programming online.</p>
         <p>We offer you a fully equipped coding environment to get you started.</p>
