--- a/index.html
+++ b/index.html
@@ -1,178 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kelompok D06</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Caveat:wght@700&family=Fira+Sans+Condensed:wght@200&display=swap" rel="stylesheet">
-  </head>
-  <body>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Progate</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="responsive.css">
+  <link rel="shortcut icon" href="favicon.ico" >
+  <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
+  <!--     │││├┤   ├─┤├┬┘├┤         -->
+  <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
+  <!--     ╔═╗╦═╗╔═╗╔═╗╔═╗╔╦╗╔═╗    -->
+  <!--     ╠═╝╠╦╝║ ║║ ╦╠═╣ ║ ║╣     -->
+  <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
+</head>
+<body>
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/assets/packs/dist/images/typo_logo-b40bf595603dc0e63a5c..svg" alt="" />
+          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Home</a>
-          <a href="#">Progate</a>
-          <a href="#">About Us</a>
+          <a href="#">Lessons</a>
+          <a href="#">Sign in</a>
+          <a href="#" class="login">Log in</a>
         </div>
       </div>
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1 class="warna-atas">Welcome to Our Team</h1>
-        <div class="lessons">
-          <!-- Header -->
-          <div class="lesson">
-            <div class="lesson-icon">
-              <a href="#eko" class="btn header square">Eko</a>
-            </div>
-            <p class="txt-contents"> Yang buat Header</p>
-          </div>
-          <!--  -->
-          <div class="lesson">
-            <div class="lesson-icon">
-              <a href="#aarief" class="btn header square">Aarief</a>
-            </div>
-            <p class="txt-contents">Yang Buat Body Main</p>
-          </div>
-          <!--  -->
-          <div class="lesson">
-            <div class="lesson-icon">
-              <a href="#ananda" class="btn header square">Ananda</a>
-            </div>
-            <p class="txt-contents">Yang Buat Body Team</p>
-          </div>
-          <!--  -->
-          <div class="lesson">
-            <div class="lesson-icon">
-              <a href="#akhmad" class="btn header square">Akhmad</a>
-            </div>
-            <p class="txt-contents">Yang Buat Footer</p>
-          </div>
-          <!--  -->
-          <div class="lesson">
-            <div class="lesson-icon">
-              <a href="#fariz" class="btn header square">Fariz</a>
-            </div>
-            <p class="txt-contents">Yang Buat Design</p>
-            <div class="clear"></div>
-          </div>
+        <h1>LEARN TO CODE.</h1>
+        <h1>LEARN TO BE CREATIVE.</h1>
+        <p>Progate is a web service where you can learn programming online.</p>
+        <p>We offer you a fully equipped coding environment to get you started.</p>
+        <div class="btn-wrapper">
+          <a href="#" class="btn signup">Sign up with Email</a>
+          <p>or</p>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</a>
         </div>
       </div>
     </div>
-    <body-main>
-      <div class="main"> 
-        <div class="container">
-          <img 
-          class="main-foto" 
-          src="https://prog-8.com/assets/packs/dist/images/success_stories_web-94a0152d16a185c8ba2c..png" 
-          alt="" 
-          title="Progate" 
-          /> 
-          <h1 class="main-judul">Progate</h1> 
-          <h2 class="main-isi"> 
-            Progate adalah platform pembelajaran programming yang berasal dari 
-            Jepang, dengan lebih dari 2 juta pengguna. Progate adalah platform yang  
-            tepat bagi kamu yang baru ingin memulai 
-            belajar programming. 
-          </h2> 
-          <h2 class="main-isi"> 
-            Di Progate, kami berkomitmen untuk membantu memenuhi potensi keahlian 
-            programming Anda. Mulai dari awal pembelajaran, kami akan mendukung penuh 
-            perjalanan Anda di dalam dunia programming. 
-          </h2> 
+    <div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Learn Where to Get Started!</h2>
+        </div>
+        <div class="lessons">
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/html.png">
+              <p>HTML & CSS</p>
+            </div>
+            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+              <p>jQuery</p>
+            </div>
+            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <p>Ruby</p>
+            </div>
+            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/php.png">
+              <p>PHP</p>
+            </div>
+            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
+          </div>
+          <div class="clear"></div>
         </div>
       </div>
-    </body-main>
-
-   <body-team>
-      <div class="body-team">
-        <div class="container">
-          <div class="team">
-            <h1 id="eko">Eko Sugeng Cahyadi</h1>
-            <div class="nama">
-                <h3>21 tahun, Header, Sampit</h3>
-                <p>Dengan pemrorgaman kita dapat menyelesaikan berbagai masalah dan menciptakan produk yang bisa bermanfaat bagi banyak orang</p>
-                <p>Program printf("Hello World "); adalah program pertama saya saat saya masuk dunia kuliah Informatika</p>
-                <span class="motivate">Done is better than perfect</span>
-            </div>
-          <img src="profile.jpeg">
-          </div>
-          <div class="team">
-            <h1 id="aarief">Aarief Fawwaz S.</h1>
-            <div class="nama">
-                <h3>17 tahun, Body, Jakarta</h3>
-                <p>Saya tertarik pada bahasa pemrograman karena asik melakukan hal yang baru.</p>
-                <p>Pertama kali saya belajar coding itu waktu SMP namun belum menelusuri banyak.</p>
-                <span class="motivate">Jika ada kemauan disitu pasti ada jalan.</span>
-            </div>
-          <img src="profile.jpeg">
-          </div>
-          <div class="team">
-            <h1 id="ananda">Ananda Adella Syahputra</h1>
-            <div class="nama">
-                <h3>22 tahun, Main, Depok</h3>
-                <p>Ketika saya belajar sedikit bahasa pemrograman saya baru sadar bahwa dunia teknologi ini sangat lah luas dan banyak hal yang belum saya ketahui dan kuasai berawal dari hal yang kecil itu lah saya makin tertarik untuk belajar bahasa pemrograman.</p>
-                <p>Pertama saya mengetahui coding atau bahasa pemrograman pada saat saya kelas 2 SMA pada saat itu saya tertarik dengan orang yang membuat blog bahkan menjual template blog berawal dari sana lah saya mulai mengotak atik file html.</p>
-                <span class="motivate">Kamu harus bersemangat dengan ide, atau masalah, atau kesalahan yang ingin diperbaiki. Jika kamu tidak cukup bersemangat sejak awal, kamu tidak akan pernah bertahan.</span>
-            </div>
-          <img src="profile.jpeg">
-          </div>
-          <div class="team">
-            <h1 id="akhmad">Akhmad Syaukani Akbar</h1>
-            <div class="nama">
-                <h3>20 tahun, Footer, Samarinda</h3>
-                <p>Dengan bahasa program dapat membangun sebuah perangkat lunak</p>
-                <p>Awal mula belajar coding yaitu dengan mengikuti berbagai event yg berhubungan dengan coding serta membaca buku pemrograman.</p>
-                <span class="motivate">Tiada nyerah walaupun 1000 error sekalipun</span>
-            </div>
-          <img src="profile.jpeg">
-          </div>
-          <div class="team">
-            <h1 id="fariz">Fariz Fahrian</h1>
-            <div class="nama">
-              <h3>20 tahun, Interface Design, Samarinda</h3>
-              <p>Bahasa pemrograman ialah masa depan.</p>
-              <p>Awal saya mengenal coding ialah saat memasuki perkuliahan, di sana materi yang diberikan memang tidak komprehensif namun seiring waktu berjalan saya mengenal berbagai platform yang memiliki materi sangat lengkap dan salah satunya ialah Progate yang tentunya sangat membantu dalam perkuliahan saya.</p>
-              <span class="motivate">"An investment in knowledge pays the best interest." — Benjamin Franklin</span>
-            </div>
-          <img src="profile.jpeg">
-           </div>
+    </div>
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Ready to become an awesome programmer?</h2>
+          <h3>Let's learn to code, learn to be creative!</h3>
         </div>
+        <span class="btn message">Start Learning</span>
       </div>
-    </body-team>
-      
+    </div>
     <footer>
-      <div class="footer">
-        <div class="nama-logo">Progate</div>
-        <div class="footer-logo">
-          <img src=" https://i.ibb.co/1dnQH1x/logo-footer.png" alt="gambar" height="80" />
-        </div>
-        <div class="footer-list">
-          <ul>
-            <li><a href="#" class="kontak">Contact</a></li>
-            <li><a href="#" class="mengenai">About</a></li>
-            <li><a href="#" class="copyright">Copyright</a></li>
-            <li><a href="#" class="privacy">Privacy Policy</a></li>
-            <li><a href="#" class="sitemap">Sitemap</a></li>
-          </ul>
-        </div>
+      <div class="container">
+        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+        <p>Learn to code, learn to be creative.</p>
       </div>
-      <div class="garis"></div>
-     </footer>
+    </footer>
   </body>
 </html>
-
-
-
-
-
